bindings/RosuFFI.h

typedef struct String String;
typedef struct OsuPerformanceAttributes OsuPerformanceAttributes;
typedef struct Pos Pos;
typedef struct Option_TooSuspicious Option_TooSuspicious;
typedef struct ResultPtrFFIError ResultPtrFFIError;
typedef struct ManiaPerformanceAttributes ManiaPerformanceAttributes;
typedef struct ExpectedDistance ExpectedDistance;
typedef struct HitObject HitObject;
typedef struct ScoreState ScoreState;
typedef struct PerformanceAttributes PerformanceAttributes;
typedef struct ManiaDifficultyAttributes ManiaDifficultyAttributes;
typedef struct Difficulty Difficulty;
typedef struct Slice_u8 Slice_u8;
typedef struct CatchDifficultyAttributes CatchDifficultyAttributes;
typedef struct CatchPerformanceAttributes CatchPerformanceAttributes;
typedef struct Option_f64 Option_f64;
typedef struct HitWindows HitWindows;
typedef struct SliderData SliderData;
typedef struct DifficultyAttributes DifficultyAttributes;
typedef struct BeatmapAttributes BeatmapAttributes;
typedef struct Mods Mods;
typedef struct TaikoDifficultyAttributes TaikoDifficultyAttributes;
typedef struct Wire_Vec_HitObject Wire_Vec_HitObject;
typedef struct TaikoPerformanceAttributes TaikoPerformanceAttributes;
typedef struct HitObjectData HitObjectData;
typedef struct Beatmap Beatmap;
typedef struct OsuDifficultyAttributes OsuDifficultyAttributes;
typedef struct Option_u32 Option_u32;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
struct Pos {
    float x;
    float y;
};
typedef enum TooSuspicious {
    TOOSUSPICIOUS_DENSITY = 0,
    TOOSUSPICIOUS_LENGTH = 1,
    TOOSUSPICIOUS_OBJECTCOUNT = 2,
    TOOSUSPICIOUS_REDFLAG = 3,
    TOOSUSPICIOUS_SLIDERPOSITIONS = 4,
    TOOSUSPICIOUS_SLIDERREPEATS = 5,
} TooSuspicious;
struct ResultPtrFFIError { uint32_t variant; union { void *ok; uint32_t err; } payload; };
struct ExpectedDistance {
    uint32_t variant;
    union {
        double some;
    } payload;
};
struct ManiaDifficultyAttributes {
    double stars;
    uint32_t n_objects;
    uint32_t n_hold_notes;
    uint32_t max_combo;
    bool is_convert;
};
struct Slice_u8 { const uint8_t *data; uintptr_t len; };
struct CatchDifficultyAttributes {
    double stars;
    double preempt;
    uint32_t n_fruits;
    uint32_t n_droplets;
    uint32_t n_tiny_droplets;
    bool is_convert;
};
struct CatchPerformanceAttributes {
    CatchDifficultyAttributes difficulty;
    double pp;
};
struct Option_f64 { uint32_t variant; double some; };
struct HitWindows {
    Option_f64 ar;
    Option_f64 od_perfect;
    Option_f64 od_great;
    Option_f64 od_good;
    Option_f64 od_ok;
    Option_f64 od_meh;
};
struct SliderData {
    uint32_t repeats;
    ExpectedDistance expected_dist;
};
struct BeatmapAttributes {
    double ar;
    double od;
    float cs;
    float hp;
    double clock_rate;
    HitWindows hit_windows;
};
struct TaikoDifficultyAttributes {
    double stamina;
    double rhythm;
    double color;
    double reading;
    double great_hit_window;
    double ok_hit_window;
    double mono_stamina_factor;
    double mechanical_difficulty;
    double consistency_factor;
    double stars;
    uint32_t max_combo;
    bool is_convert;
};
struct Wire_Vec_HitObject { uint8_t *data; uint32_t len; uint32_t capacity; };
typedef enum Mode {
    MODE_OSU = 0,
    MODE_TAIKO = 1,
    MODE_CATCH = 2,
    MODE_MANIA = 3,
} Mode;
struct TaikoPerformanceAttributes {
    TaikoDifficultyAttributes difficulty;
    double pp;
    double pp_acc;
    double pp_difficulty;
    Option_f64 estimated_unstable_rate;
};
struct HitObjectData {
    uint32_t variant;
    union {
        SliderData slider;
        DurationData spinner;
        DurationData hold;
    } payload;
};
struct OsuDifficultyAttributes {
    double aim;
    double aim_difficult_slider_count;
    double speed;
    double flashlight;
    double reading;
    double slider_factor;
    double aim_top_weighted_slider_factor;
    double speed_top_weighted_slider_factor;
    double speed_note_count;
    double aim_difficult_strain_count;
    double speed_difficult_strain_count;
    double reading_difficult_note_count;
    double nested_score_per_object;
    double legacy_score_base_multiplier;
    double maximum_legacy_combo_score;
    double ar;
    double great_hit_window;
    double ok_hit_window;
    double meh_hit_window;
    double hp;
    uint32_t n_circles;
    uint32_t n_sliders;
    uint32_t n_large_ticks;
    uint32_t n_spinners;
    double stars;
    uint32_t max_combo;
};
struct Option_u32 { uint32_t variant; uint32_t some; };
struct OsuPerformanceAttributes {
    OsuDifficultyAttributes difficulty;
    double pp;
    double pp_acc;
    double pp_aim;
    double pp_flashlight;
    double pp_reading;
    double pp_speed;
    double effective_miss_count;
    Option_f64 speed_deviation;
    double combo_based_estimated_miss_count;
    Option_f64 score_based_estimated_miss_count;
    double aim_estimated_slider_breaks;
    double speed_estimated_slider_breaks;
};
struct Option_TooSuspicious { uint32_t variant; TooSuspicious some; };
struct ManiaPerformanceAttributes {
    ManiaDifficultyAttributes difficulty;
    double pp;
    double pp_difficulty;
};
struct HitObject {
    Pos pos;
    double start_time;
    HitObjectData data;
};
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
struct PerformanceAttributes {
    uint32_t variant;
    union {
        OsuPerformanceAttributes osu;
        TaikoPerformanceAttributes taiko;
        CatchPerformanceAttributes catch;
        ManiaPerformanceAttributes mania;
    } payload;
};
struct DifficultyAttributes {
    uint32_t variant;
    union {
        OsuDifficultyAttributes osu;
        TaikoDifficultyAttributes taiko;
        CatchDifficultyAttributes catch;
        ManiaDifficultyAttributes mania;
    } payload;
};
void mods_sanitize(Mods * instance);
Option_f64 mods_clock_rate(Mods * instance);
ResultPtrFFIError mods_from_json(String str, Mode mode, bool deny_unknown_fields);
ResultPtrFFIError difficulty_create(void);
uint32_t mods_len(Mods * instance);
void difficulty_s_mods(Difficulty * instance, String str);
bool mods_insert_json(Mods * instance, String str, bool deny_unknown_fields);
double beatmap_bpm(Beatmap * instance);
void beatmap_destroy(const Beatmap * instance);
void difficulty_p_mods(Difficulty * instance, const Mods * mods);
Wire_Vec_HitObject beatmap_hit_objects(const Beatmap * instance);
void difficulty_ar(Difficulty * instance, float ar);
float beatmap_od(Beatmap * instance);
void difficulty_i_mods(Difficulty * instance, uint32_t mods);
void mods_clear(Mods * instance);
void difficulty_cs(Difficulty * instance, float cs);
float beatmap_ar(Beatmap * instance);
double beatmap_slider_tick_rate(Beatmap * instance);
bool beatmap_is_convert(Beatmap * instance);
uint32_t mods_bits(Mods * instance);
float beatmap_stack_leniency(Beatmap * instance);
void mods_destroy(const Mods * instance);
void mods_insert(Mods * instance, String str);
String mods_json(const Mods * instance);
float beatmap_hp(Beatmap * instance);
void difficulty_od(Difficulty * instance, float od);
ResultPtrFFIError beatmap_from_bytes(Slice_u8 data);
Option_TooSuspicious beatmap_check_suspicious(Beatmap * instance);
void difficulty_passed_objects(Difficulty * instance, uint32_t passed_objects);
void difficulty_lazer(Difficulty * instance, bool lazer);
Mode beatmap_mode(Beatmap * instance);
ResultPtrFFIError mods_from_bits(uint32_t bits, Mode mode);
ResultPtrFFIError mods_create(Mode mode);
int32_t beatmap_version(Beatmap * instance);
double beatmap_total_break_time(Beatmap * instance);
DifficultyAttributes difficulty_calculate(const Difficulty * instance, const Beatmap * beatmap);
double difficulty_get_clock_rate(Difficulty * instance);
float beatmap_cs(Beatmap * instance);
double beatmap_slider_multiplier(Beatmap * instance);
bool beatmap_convert(Beatmap * instance, Mode mode, const Mods * mods);
void mods_remove_unknown_mods(Mods * instance);
void interoptopus_wire_destroy_78044(uint8_t * data, int32_t len, int32_t capacity);
void difficulty_destroy(const Difficulty * instance);
void difficulty_hp(Difficulty * instance, float hp);
void difficulty_hardrock_offsets(Difficulty * instance, bool hardrock_offsets);
bool mods_contains(const Mods * instance, String str);
void difficulty_clock_rate(Difficulty * instance, double clock_rate);
ResultPtrFFIError beatmap_from_path(String path);
ResultPtrFFIError mods_from_acronyms(String str, Mode mode);