JavaRosuPP/src/main/java/desu/life/RosuFFI.java


    @Structure.FieldOrder({"variant", "some"})
    public static class OptionDifficultyAttributes extends Structure {
        public int variant;
        public DifficultyAttributes some;
        public static class ByValue extends OptionDifficultyAttributes implements Structure.ByValue {}
        public Optional<DifficultyAttributes> toOptional() {
            if (variant != 0) return Optional.empty();
            some.read();
            return Optional.of(some);
        }
    }

    @Structure.FieldOrder({"variant", "some"})
    public static class OptionPerformanceAttributes extends Structure {
        public int variant;
        public PerformanceAttributes some;
        public static class ByValue extends OptionPerformanceAttributes implements Structure.ByValue {}
        public Optional<PerformanceAttributes> toOptional() {
            if (variant != 0) return Optional.empty();
            some.read();
            return Optional.of(some);
        }
    }

    @Structure.FieldOrder({"max_combo", "osu_large_tick_hits", "osu_small_tick_hits", "slider_end_hits",
        "n_geki", "n_katu", "n300", "n100", "n50", "misses", "legacy_total_score"})
    public static class ScoreState extends Structure {
        public int max_combo, osu_large_tick_hits, osu_small_tick_hits, slider_end_hits;
        public int n_geki, n_katu, n300, n100, n50, misses;
        public OptionUint legacy_total_score;
        public static class ByValue extends ScoreState implements Structure.ByValue {}
        ByValue byValue() {
            write();
            ByValue value = new ByValue();
            value.useMemory(getPointer());
            value.read();
            return value;
        }
    }

    @Structure.FieldOrder({"ar", "od_perfect", "od_great", "od_good", "od_ok", "od_meh"})
    public static class HitWindows extends Structure {
        public OptionDouble ar, od_perfect, od_great, od_good, od_ok, od_meh;
    }

    @Structure.FieldOrder({"ar", "od", "cs", "hp", "clock_rate", "hit_windows"})
    public static class BeatmapAttributes extends Structure {
        public double ar, od;
        public float cs, hp;
        public double clock_rate;
        public HitWindows hit_windows;
        public static class ByValue extends BeatmapAttributes implements Structure.ByValue {}
    }

    public record SliderData(long repeats, OptionalDouble expectedDistance) {}
    public record HitObject(float x, float y, double startTime, HitObjectKind kind,
                            SliderData slider, double duration) {}

    @Structure.FieldOrder({"data", "len", "capacity"})
    public static class WireHitObjects extends Structure implements AutoCloseable {
        public Pointer data;
        public int len;
        public int capacity;
        public static class ByValue extends WireHitObjects implements Structure.ByValue {}

        public List<HitObject> unwire() {
            if (data == null || len == 0) return List.of();
            ByteBuffer buffer = data.getByteBuffer(0, len).order(ByteOrder.LITTLE_ENDIAN);
            int count = buffer.getInt();
            List<HitObject> result = new ArrayList<>(count);
            for (int i = 0; i < count; i++) {
                float x = buffer.getFloat();
                float y = buffer.getFloat();
                double start = buffer.getDouble();
                int tag = Byte.toUnsignedInt(buffer.get());
                HitObjectKind kind = HitObjectKind.values()[tag];
                SliderData slider = null;
                double duration = 0;
                if (kind == HitObjectKind.Slider) {
                    long repeats = Integer.toUnsignedLong(buffer.getInt());
                    int option = Byte.toUnsignedInt(buffer.get());
                    OptionalDouble distance = option == 0
                        ? OptionalDouble.of(buffer.getDouble()) : OptionalDouble.empty();
                    slider = new SliderData(repeats, distance);
                } else if (kind == HitObjectKind.Spinner || kind == HitObjectKind.Hold) {
                    duration = buffer.getDouble();
                }
                result.add(new HitObject(x, y, start, kind, slider, duration));
            }
            return result;
        }

        @Override public void close() {
            if (data != null) {
                NATIVE.interoptopus_wire_destroy_78044(data, len, capacity);
                data = null;
                len = 0;
                capacity = 0;
            }
        }
    }

    private abstract static class Service implements AutoCloseable {
        private Pointer context;
        Service(Pointer context) { this.context = context; }
        final Pointer context() {
            if (context == null) throw new IllegalStateException("Service already closed");
            return context;
        }
        abstract void destroy(Pointer context);
        @Override public final void close() {
            if (context != null) {
                destroy(context);
                context = null;
            }
        }
    }

    public static final class Beatmap extends Service {
        public Beatmap(byte[] data) {
            super(NATIVE.beatmap_from_bytes(SliceU8.from(data)).unwrap("beatmap_from_bytes"));
        }
        public Beatmap(String path) {
            super(NATIVE.beatmap_from_path(Utf8String.fromJava(path)).unwrap("beatmap_from_path"));
        }
        @Override void destroy(Pointer context) { NATIVE.beatmap_destroy(context); }
        public boolean convert(Mode mode, Mods mods) { return NATIVE.beatmap_convert(context(), mode.value, mods.context()) != 0; }
        public boolean convert(Mode mode) {
            try (var mods = Mods.create(mode)) { return convert(mode, mods); }
        }
        public double bpm() { return NATIVE.beatmap_bpm(context()); }
        public double totalBreakTime() { return NATIVE.beatmap_total_break_time(context()); }
        public int version() { return NATIVE.beatmap_version(context()); }
        public boolean isConvert() { return NATIVE.beatmap_is_convert(context()) != 0; }
        public float stackLeniency() { return NATIVE.beatmap_stack_leniency(context()); }
        public Mode mode() { return Mode.fromValue(NATIVE.beatmap_mode(context())); }
        public float ar() { return NATIVE.beatmap_ar(context()); }
        public float cs() { return NATIVE.beatmap_cs(context()); }
        public float hp() { return NATIVE.beatmap_hp(context()); }
        public float od() { return NATIVE.beatmap_od(context()); }
        public double sliderMultiplier() { return NATIVE.beatmap_slider_multiplier(context()); }
        public double sliderTickRate() { return NATIVE.beatmap_slider_tick_rate(context()); }
        public Optional<TooSuspicious> checkSuspicious() { return NATIVE.beatmap_check_suspicious(context()).toOptional(); }
        public WireHitObjects.ByValue hitObjects() { return NATIVE.beatmap_hit_objects(context()); }
    }

    public static final class Mods extends Service {
        private Mods(Pointer context) { super(context); }
        public static Mods create(Mode mode) { return new Mods(NATIVE.mods_create(mode.value).unwrap("mods_create")); }
        public static Mods fromAcronyms(String value, Mode mode) {
            return new Mods(NATIVE.mods_from_acronyms(Utf8String.fromJava(value), mode.value).unwrap("mods_from_acronyms"));
        }
        public static Mods fromBits(long value, Mode mode) {
            return new Mods(NATIVE.mods_from_bits((int) value, mode.value).unwrap("mods_from_bits"));
        }
        public static Mods fromJson(String value, Mode mode, boolean denyUnknown) {
            return new Mods(NATIVE.mods_from_json(Utf8String.fromJava(value), mode.value, bool(denyUnknown)).unwrap("mods_from_json"));
        }
        @Override void destroy(Pointer context) { NATIVE.mods_destroy(context); }
        public void removeUnknownMods() { NATIVE.mods_remove_unknown_mods(context()); }
        public void sanitize() { NATIVE.mods_sanitize(context()); }
        public long bits() { return Integer.toUnsignedLong(NATIVE.mods_bits(context())); }
        public long length() { return Integer.toUnsignedLong(NATIVE.mods_len(context())); }
        public String json() { return NATIVE.mods_json(context()).consume(); }
        public boolean insertJson(String value, boolean denyUnknown) {
            return NATIVE.mods_insert_json(context(), Utf8String.fromJava(value), bool(denyUnknown)) != 0;
        }
        public void insert(String value) { NATIVE.mods_insert(context(), Utf8String.fromJava(value)); }
        public boolean contains(String value) { return NATIVE.mods_contains(context(), Utf8String.fromJava(value)) != 0; }
        public void clear() { NATIVE.mods_clear(context()); }
        public OptionalDouble clockRate() { return NATIVE.mods_clock_rate(context()).toOptional(); }
    }

    public static final class Difficulty extends Service {
        public Difficulty() { super(NATIVE.difficulty_create().unwrap("difficulty_create")); }
        @Override void destroy(Pointer context) { NATIVE.difficulty_destroy(context); }
        public void mods(Mods value) { NATIVE.difficulty_p_mods(context(), value.context()); }
        public void mods(long value) { NATIVE.difficulty_i_mods(context(), (int) value); }
        public void mods(String value) { NATIVE.difficulty_s_mods(context(), Utf8String.fromJava(value)); }
        public void passedObjects(long value) { NATIVE.difficulty_passed_objects(context(), (int) value); }
        public void clockRate(double value) { NATIVE.difficulty_clock_rate(context(), value); }
        public void ar(float value) { NATIVE.difficulty_ar(context(), value); }
        public void cs(float value) { NATIVE.difficulty_cs(context(), value); }
        public void hp(float value) { NATIVE.difficulty_hp(context(), value); }
        public void od(float value) { NATIVE.difficulty_od(context(), value); }
        public void hardrockOffsets(boolean value) { NATIVE.difficulty_hardrock_offsets(context(), bool(value)); }
        public void lazer(boolean value) { NATIVE.difficulty_lazer(context(), bool(value)); }
        public DifficultyAttributes calculate(Beatmap beatmap) { return NATIVE.difficulty_calculate(context(), beatmap.context()); }
        public double clockRate() { return NATIVE.difficulty_get_clock_rate(context()); }
    }
